--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: home
 	  <h3>I'm <strong>{{ site.author }}</strong>, a Master Student at Carnegie Mellon University.</h3>
 	  <h3>I would Graduate at May 2016 and looking for full-time job now!</h3>
 	  <h3>Have a look at some of my <a href="{{ site.baseurl }}/projects.html"> projects</a>.</h3>
-	  <h3>For more check out my academic &amp; professional <a href="http://biomadeira.github.io/vitae">Resume</a>.</h3>
+	  <h3>For more check out my academic &amp; professional <a href="http://yu-zhengyu.github.io/RESUME">Resume</a>.</h3>
 	  <h3>Contact me at <a href="http://www.linkedin.com/in/{{ site.linkedin }}">LinkIn</a> or by <a href="mailto:{{ site.email }}">email</a>.</h3>
 	  {% include social.html %}
 	</div>
