--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ layout: home
 	  <h3>Have a look at some of my <a href="{{ site.baseurl }}/projects.html"> projects</a>.</h3>
 	  <h3>For more check out my academic &amp; professional <a href="http://yu-zhengyu.github.io/RESUME">Resume</a>.</h3>
 	  <h3>Contact me at <a href="http://www.linkedin.com/in/{{ site.linkedin }}">LinkIn</a> or by <a href="mailto:{{ site.email }}">email</a>.</h3>
+	  <iframe height="36" width="260" src="http://www.ximalaya.com/swf/sound/red.swf?id=7833658" frameborder=0 allowfullscreen></iframe>
 	  {% include social.html %}
 	</div>
 </section>
