--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: home
 	  <h3>For more check out my academic &amp; professional <a href="http://yu-zhengyu.github.io/RESUME">Resume</a>.</h3>
 	  <h3>Contact me at <a href="http://www.linkedin.com/in/{{ site.linkedin }}">LinkIn</a> or by <a href="mailto:{{ site.email }}">email</a>.</h3>
 	  <br/>
-	  <iframe height="36" width="260" src="http://www.ximalaya.com/swf/sound/red.swf?id=7833658" frameborder=0 allowfullscreen></iframe>
+	  <iframe width="20" height="20" src="https://www.youtube.com/embed/FYZLAvO3Y38?autoplay=1" frameborder="0" allowfullscreen></iframe> Click the left button to stop music.
 	  <br/>
 	  {% include social.html %}
 	</div>
